--- a/test.html
+++ b/test.html
@@ -39,6 +39,6 @@
             </div>
             <div class="element-container"></div>
         </div>
-		<script src="/js/catalog.js"></script>
+		<script src="js/catalog.js"></script>
     </body>
 </html>
